Theme color toggle functionality complete

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>LushCare - Exceptional Lawn Services at Your Fingertips</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="dark:bg-darkBg"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
